cabal-version:       2.2
name:                cardano-metadata-submitter
version:             0.1.0.0
synopsis:            A library and CLI for manipulating data for the Metadata Server CIP
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
copyright:           2020 Input Output (Hong Kong) Ltd.
author:              Obsidian Systems LLC
maintainer:          operations@iohk.io

flag development
    description: Disable `-Werror`
    default: True
    manual: True

library
  exposed-modules: Cardano.Metadata.Types
                 , Cardano.Metadata.GoguenRegistry
                 , Test.Cardano.Metadata.Types
                 , Test.Cardano.Metadata.GoguenRegistry
  other-modules: AesonHelpers
  build-depends: base ^>=4.12.0.0
               , aeson
               , bytestring
               , containers
               , cryptonite
               , hex-text
               , prettyprinter
               , some
               , tagged
               , tasty-quickcheck
               , text
               , unordered-containers
               , cardano-prelude
               , cardano-crypto-class
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
                      OverloadedStrings
  if (!flag(development))
    ghc-options: -Werror

executable cardano-metadata-submitter
  main-is:             cardano-metadata-submitter.hs
  build-depends:       base ^>=4.12.0.0
                     , aeson
                     , bytestring
                     , cardano-crypto-class
                     , cardano-binary
                     , cardano-prelude
                     , cardano-metadata-submitter
                     , directory
                     , optparse-applicative
                     , text
  hs-source-dirs:      app
  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude
                      OverloadedStrings
  if (!flag(development))
    ghc-options: -Werror

test-suite unit
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
                      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
      -O2
  build-depends: base
               , cardano-prelude
               , cardano-metadata-submitter
               , tasty
               , tasty-hunit
               , tasty-quickcheck
  type: exitcode-stdio-1.0
  extra-source-files: test/examples/*
  hs-source-dirs: test/unit
  main-is: Main.hs
  if (!flag(development))
    ghc-options: -Werror

benchmark cardano-metadata-submitter-bench
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
                      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
      -O2
  build-depends: base
               , cardano-prelude
               , criterion
               , cardano-metadata-submitter
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  if (!flag(development))
    ghc-options: -Werror
