cabal-version:       2.2
name:                cardano-metadata-submitter
version:             0.1.0.0
synopsis:            A library and CLI for manipulating data for the Metadata Server CIP
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
copyright:           2020 Input Output (Hong Kong) Ltd.
author:              Obsidian Systems LLC
maintainer:          operations@iohk.io

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  exposed-modules: Cardano.Metadata.Types
                 , Cardano.Metadata.GoguenRegistry
  other-modules: AesonHelpers
  build-depends: base ^>=4.12.0.0
               , aeson
               , base16-bytestring
               , base64-bytestring
               , bytestring
               , hex-text
               , prettyprinter
               , text
               , unordered-containers
               , network-uri
               , cardano-prelude
               , cardano-crypto-class
               , cardano-api
               , cardano-crypto
               , JuicyPixels
               , cardano-ledger-shelley-ma
               , ouroboros-consensus-shelley
               , shelley-spec-ledger
               , cardano-slotting
               , containers
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
                      OverloadedStrings
  if (!flag(development))
    ghc-options: -Werror -Wall

executable cardano-metadata-submitter
  main-is:             cardano-metadata-submitter.hs
  build-depends:       base ^>=4.12.0.0
                     , aeson
                     , base64-bytestring
                     , bytestring
                     , cardano-crypto-class
                     , cardano-binary
                     , cardano-prelude
                     , cardano-metadata-submitter
                     , directory
                     , optparse-applicative
                     , text
                     , cardano-api
                     , cardano-cli
                     , cardano-crypto
                     , time
                     , cardano-slotting
  hs-source-dirs:      app
  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude
                      OverloadedStrings
  if (!flag(development))
    ghc-options: -Werror -Wall
